<resources>
    <string name="app_name">MathGame</string>

    <string name="main_page_title">Select an operation to practice</string>
    <string name="mode1">Addition (+)</string>
    <string name="mode2">Subtraction (-)</string>
    <string name="mode3">Multiplication (×)</string>
    <string name="mode4">Division (÷)</string>
    <string name="see_results">See Results</string>
    <string name="no_timer">No Timer</string>
    <string name="your_answer">Your answer:</string>
    <string name="correct_answer">Correct answer:</string>
    <string name="setup">Setup</string>
    <string name="table_selected">Table Selected:</string>
    <string name="start">Start</string>
    <string name="congrats_text">Good job! All your answers are right!</string>
    <string name="logo">logo</string>
    <string name="title">title</string>
    <string name="correct_image_desc">green check mark</string>
    <string name="operation_answered">Operation answered: %d</string>
    <string name="mistakes">Mistakes(%d):</string>
    <string name="replay">Replay</string>
    <string name="change_table">Change Table</string>
    <string name="main_menu">Main Menu</string>
    <string name="mode">Mode: %1$s</string>
    <string name="mode_selected">Mode Selected:</string>
    <string name="unanswered">Unanswered</string>
    <string name="result">Result:</string>
    <string name="answer">Answer:</string>

    <string-array name="tables">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

</resources>
